--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "color-the-world",
   "version": "0.0.1",
   "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "CreatePage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
